# teacher-agent

./: .dockerignore  .env.example  .env.server.example  .gitattributes  .gitignore  DEPLOY-CLOUD.md  DEPLOY-SYNOLOGY.md  DOCKER.md  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  update.bat  update.sh  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macbuild.conf.json  tauri.windows.conf.json
src-tauri/assets/: feishu_bridge.mjs
src-tauri/crates/forge-codec/: Cargo.toml
src-tauri/crates/forge-codec/src/: audio.rs  encoder.rs  ffmpeg_fallback.rs  lib.rs  loudness.rs  muxer.rs
src-tauri/crates/polaris-cli/: Cargo.toml
src-tauri/crates/polaris-cli/src/: main.rs
src-tauri/crates/polaris-collab/: Cargo.toml
src-tauri/crates/polaris-collab/src/: lib.rs
src-tauri/crates/polaris-collab/src/collab/: account_store.rs  auth.rs  chat.rs  checks.rs  commands.rs  db.rs  gateway.rs  gitea.rs  http.rs  identity.rs  lead.rs  lead_ai.rs  mergectl.rs  mod.rs  projects.rs  tasks.rs  teams.rs  tunnel.rs  workset.rs
src-tauri/crates/polaris-fable/: Cargo.toml
src-tauri/crates/polaris-fable/src/: lib.rs
src-tauri/crates/polaris-fable/src/fable/: agent.rs  echo.rs  embed_local.rs  eval.rs  mod.rs  ontology.rs  scan.rs  sched.rs  sense.rs
src-tauri/crates/polaris-fable/src/kb/: access.rs  ask.rs  enrich.rs  graph.rs  ingest.rs  maintain.rs  mod.rs  packs.rs  scan.rs  search.rs  threat.rs
src-tauri/crates/polaris-forge/: Cargo.toml
src-tauri/crates/polaris-forge/examples/: gen_spec.rs
src-tauri/crates/polaris-forge/py/: pptx_bridge.py
src-tauri/crates/polaris-forge/src/: lib.rs
src-tauri/crates/polaris-forge/src/forge/: capture.rs  docx_import.rs  docx_native.rs  figma_bridge.rs  fx_safe.rs  image.rs  mod.rs  pptx.rs  pptx_native.rs  pptx_python.rs  tts.rs  video.rs
src-tauri/crates/polaris-kernel/: Cargo.toml  build.rs
src-tauri/crates/polaris-kernel/src/: claude_md.rs  conv.rs  convert.rs  headless.rs  lib.rs
src-tauri/crates/polaris-kernel/src/chat/: artifacts.rs  attach.rs  bridges.rs  mod.rs  pipeline.rs  prompt.rs  titling.rs  types.rs
src-tauri/crates/polaris-kernel/src/doctor/: check.rs  install.rs  mod.rs  path.rs  probe.rs  types.rs  update.rs  uv_cache.rs
src-tauri/crates/polaris-kernel/src/integrations/: codex_proxy.rs  feishu.rs  mod.rs  nas.rs  wecom.rs
src-tauri/crates/polaris-kernel/src/provider/: claude_login.rs  codex_login.rs  image_store.rs  mod.rs  oauth_loopback.rs  store.rs  usage.rs
src-tauri/crates/polaris-kernel/src/skills/: catalog.rs  commands.rs  intent.rs  mod.rs  seed.rs  store.rs  templates.rs
src-tauri/crates/polaris-protocol/: Cargo.toml
src-tauri/crates/polaris-protocol/src/: lib.rs
src-tauri/crates/polaris-runtime/: Cargo.toml
src-tauri/crates/polaris-runtime/src/: host.rs  http.rs  lib.rs  paths.rs  procs.rs
src-tauri/crates/polaris-sandbox/src/: commands.rs  e2b.rs
src-tauri/crates/polaris-wiki/: Cargo.toml
src-tauri/crates/polaris-wiki/src/: lib.rs
src-tauri/crates/polaris-wiki/src/wiki/: compile.rs  mod.rs
src-tauri/icons/: icon.icns
src-tauri/src/: accounts.rs  apihub.rs  ark.rs  expert.rs  hosting.rs  imagegen.rs  infer.rs  lib.rs  main.rs  mediaops.rs  palette.rs  persona.rs  project.rs  server.rs  titlebar.rs  updater.rs  wiring.rs
src-tauri/src/expert/: avatars.rs  expert_docs.rs  expert_groups.rs  teams.rs
src-tauri/src/templates/experts/: GENERIC.md
src-tauri/src/templates/experts/ai/: ai-engineer.md  ml-engineer.md  prompt-engineer.md
src-tauri/src/templates/experts/data/: data-analyst.md  data-engineer.md  data-scientist.md  database-architect.md  database-optimizer.md  dataviz-storyteller.md  vector-db-engineer.md
src-tauri/src/templates/experts/devops/: devops-engineer.md  docker-expert.md  incident-responder.md  network-engineer.md  sre-engineer.md  terraform-specialist.md
src-tauri/src/templates/experts/docs/: api-documenter.md  docs-architect.md  technical-writer.md  tutorial-engineer.md
src-tauri/src/templates/experts/frontend/: accessibility-tester.md  frontend-engineer.md  mobile-developer.md
src-tauri/src/templates/experts/language/: cpp-pro.md  embedded-systems.md  golang-pro.md  ios-developer.md  java-pro.md  kotlin-specialist.md  python-pro.md  rust-pro.md  sql-pro.md  typescript-pro.md
src-tauri/src/templates/experts/marketing/: content-marketer.md  copywriter.md  growth-hacker.md  pitch-coach.md  seo-specialist.md  social-media-manager.md  visual-designer.md
src-tauri/src/templates/experts/media/: media-accountkeeper.md  media-analytics.md  media-competitor.md  media-critic.md  media-deaiflavor.md  media-factchecker.md  media-georestructurer.md  media-imagedirector.md  media-publisher.md  media-researcher.md  media-reviewer.md  media-strategist.md  media-typesetter.md  media-writer.md
src-tauri/src/templates/experts/orchestration/: chief-strategist.md
src-tauri/src/templates/experts/product/: financial-modeler.md  growth-experimenter.md  pricing-strategist.md  product-manager.md  ux-researcher.md
src-tauri/src/templates/experts/quality/: code-reviewer.md  debugger.md  performance-engineer.md  refactoring-specialist.md  test-automator.md
src-tauri/src/templates/experts/research/: competitive-analyst.md  deep-research.md  market-researcher.md  trend-analyst.md
src-tauri/src/templates/experts/security/: compliance-privacy.md  privacy-engineer.md  security-auditor.md  threat-modeling-expert.md
src-tauri/src/templates/experts/specialty/: browser-automation.md  fintech-engineer.md  game-developer.md  legacy-modernizer.md
src-tauri/src/templates/experts/system/: api-contract-designer.md  architecture-advisor.md  backend-architect.md  cloud-architect.md  kubernetes-architect.md  platform-engineer.md
src-tauri/src/templates/experts/teacher/: teacher-activitydesigner.md  teacher-classmaster.md  teacher-docwriter.md  (+11 more)
src-tauri/src/templates/personas/: content-writer.md
src-tauri/src/templates/skills/: wechat-pipeline.md  xiaohongshu-pipeline.md
src-tauri/src/voice/: asr.rs  live.rs  mod.rs
(+361 files in other folders)
