# ═══════════════════════════════════════════════════════════════
# polaris-cli — Forge 渲染引擎命令行(二进制名 polaris-forge)
#
# 给 agent(claude CLI)/脚本/Docker 直接调用:preflight / 截图 / deck→pptx /
# spec→pptx / deck→video / tts / pptx 校验,与桌面端同一份引擎源码。
#
# ★ 坑(47d1e0c 实证):CLI 绝不能做主包 [[bin]] —— tauri bundler 会按
#   [[bin]] 列表连坐 copy,打桌面包必炸。独立 crate 是唯一安全姿势。
#   构建:cargo build -p polaris-cli --release   (产物 target/release/polaris-forge)
# ═══════════════════════════════════════════════════════════════
[package]
name = "polaris-cli"
version = "1.7.2"
edition = "2021"
description = "polaris-forge — Polaris Forge 渲染引擎 CLI"
publish = false

[[bin]]
name = "polaris-forge"
path = "src/main.rs"

# Docker 服务端入口。曾是主包 [[bin]],47d1e0c 因 tauri bundler 连坐被迫删除;
# 落户本 crate = bundler 不可见 + server feature 经依赖恒开,desktop 打包零影响。
[[bin]]
name = "teacher-server"
path = "src/bin/polaris-server.rs"

[dependencies]
# 复用主 lib 的全部引擎(forge 五件套 + convert)。server feature 是 Docker 侧
# 验证过的无-tauri 已知良好组合;CLI 不起 HTTP,只是借这条特性线拿引擎。
polaris-teacher = { path = "../..", default-features = false, features = ["server"] }
serde_json = "1"
# teacher-server bin 跑 async serve() 用;与主 lib 的 tokio 同版本统一,零额外编译。
tokio = { version = "1", features = ["rt-multi-thread"] }
