# ═══════════════════════════════════════════════════════════════
# polaris-collab — 多人协作引擎 crate(分仓规划 v2 第 5 仓的仓内形态)
# 账号/授权表/任务卡/合并闸门/检查工作流/Gitea/iroh 隧道/云中继网关。
# 边界铁律: 只准向下依赖 polaris-kernel(skills 检查技能)与 polaris-runtime(host shim);
#   应用数据面 apihub 与桌面内嵌主机 hosting 是壳件, 留在 polaris-app —— 本 crate
#   不认识 kb/chat/fable 等任何同层引擎, 编译器物理保证。
# 特性: collab-host(axum 协作路由) / collab-net(iroh 隧道+云中继) / desktop(tauri 命令)。
# ═══════════════════════════════════════════════════════════════
[package]
name = "polaris-collab"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
polaris-kernel = { path = "../polaris-kernel" }
polaris-runtime = { path = "../polaris-runtime" }
# 版本与主 crate 逐条对齐(同 workspace 共享编译产物,零增量)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
once_cell = "1"
parking_lot = "0.12"
regex = "1"
directories = "5"
walkdir = "2"
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
sha2 = "0.10"
getrandom = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rusqlite = { version = "0.32", features = ["bundled"] }
# 账号密码哈希(argon2id PHC)与账号镜像加密(云端零知识)
argon2 = "0.5"
chacha20poly1305 = "0.10"
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread", "sync", "net", "io-util", "signal"] }
tauri = { version = "2.1", features = [], optional = true }
# 协作路由(collab-host)
axum = { version = "0.7", features = ["ws", "multipart"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"], optional = true }
futures-util = { version = "0.3", optional = true }
# 组网隧道 + 云中继(collab-net):iroh 依赖树大,默认不进
iroh = { version = "1", optional = true }
tokio-tungstenite = { version = "0.24", optional = true }

[features]
default = []
desktop = ["dep:tauri"]
collab-host = ["dep:axum", "dep:tower", "dep:tower-http", "dep:futures-util"]
collab-net = ["dep:iroh", "dep:tokio-tungstenite"]
