# ═══════════════════════════════════════════════════════════════
# polaris-wiki — llmwiki 知识网构建 crate(分仓规划 v2 第 6 仓·v2 新增)
# 检索是「读」,这里是「写的那一半」: 摄入资料时 LLM 抽实体/概念、headless 写 wiki
# 词条、维护双链知识网。依赖层级 3→2: 全体系唯一获批依赖其他引擎(fable)的板块,
# 另向下用 kernel(doctor 定位 claude / provider 环境注入)。词条数据在 ~/Polaris,不入仓。
# ═══════════════════════════════════════════════════════════════
[package]
name = "polaris-wiki"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
polaris-fable = { path = "../polaris-fable" }
polaris-kernel = { path = "../polaris-kernel" }
polaris-runtime = { path = "../polaris-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
once_cell = "1"
parking_lot = "0.12"
tauri = { version = "2.1", features = [], optional = true }

[features]
default = []
desktop = ["dep:tauri"]
